--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Rocky Mountains -- Fiction'
 - !lcsh 'Mountain life -- Fiction'
+- GITenberg
 title: 'The Award of Justice; Or, Told in the Rockies: A Pen Picture of the West'
 url: http://www.gutenberg.org/ebooks/30028
